# dmc4_hook

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Config.hpp.in  LICENSE  README.md  build_debug.bat  build_release.bat  build_vs2019_debug.bat  build_vs2019_release.bat  build_vs2022_debug.bat  build_vs2022_release.bat  create_mod.bat  create_mod.sh  run-clang-tidy.sh  update-localization.ps1
dependencies/: CMakeLists.txt
dependencies/DebugDraw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  DebugDraw.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  debug_draw.vcxproj  debug_draw.vcxproj.filters
dependencies/DebugDraw/Debug/: debug_draw.recipe
dependencies/DebugDraw/Debug/debug_draw.tlog/: CustomBuild.command.1.tlog  debug_draw.lastbuildstate
dependencies/DebugDraw/RelWithDebInfo/: debug_draw.recipe
dependencies/DebugDraw/RelWithDebInfo/debug_draw.tlog/: CustomBuild.write.1.tlog  debug_draw.lastbuildstate
dependencies/DebugDraw/Release/: debug_draw.recipe
dependencies/DebugDraw/Release/debug_draw.tlog/: CustomBuild.read.1.tlog  debug_draw.lastbuildstate
dependencies/csys/: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
dependencies/csys/cmake/: FindFilesystem.cmake  csys_configure_iwyu.cmake  csys_pch.h.in  csys_utils.cmake  csys_version.h.in
dependencies/csys/examples/: CMakeLists.txt
dependencies/csys/examples/simple_example/: CMakeLists.txt
dependencies/csys/include/csys/: argument_parser.h  command.h  item.h  item.inl  string.h  system.h  system.inl
dependencies/csys/scripts/: cmake_install.sh  cmake_uninstall.sh
dependencies/csys/src/: csys.cpp
dependencies/csys/tests/: CMakeLists.txt  test_autocomplete.cpp  test_char_argument.cpp  test_history.cpp  test_item.cpp  test_script.cpp  test_string_argument.cpp  test_system.cpp
dependencies/debug-draw/: CMakeLists.txt  debug_draw.hpp
dependencies/debug-draw/samples/: sample_gl_core.cpp
dependencies/debug-draw/samples/vectormath/: vectormath.h
dependencies/glm/: CMakeLists.txt
dependencies/imgui/: imconfig.h
dependencies/minhook/include/: MinHook.h
dependencies/minhook/src/: hook.c
dependencies/spdlog/: CMakeLists.txt
lib/: hacklib.lib  libircclient.lib
src/: CMakeLists.txt  Console.cpp  Console.hpp  D3D9Hook.cpp  D3D9Hook.hpp  GuiFunctions.cpp  GuiFunctions.hpp  LicenseStrings.hpp  Main.cpp  Mod.hpp  ModFramework.cpp  ModFramework.hpp  Mods.cpp  Mods.hpp  Mutators.cpp  Mutators.hpp  WindowsMessageHook.cpp  XInputHook.cpp  XInputHook.hpp  dmc4_hook.7z
src/dmc4_hook/: CMakeLists.txt  Mods.cpp  Mods.hpp  addresses.cpp  addresses.h  aobs.h  bools.h  config.cpp  config.h  gui_functions.cpp  gui_functions.h  hooks.cpp  hooks.h  imgui_dmc4.cpp  imgui_dmc4.h  ini.cpp  ini.h  main.cpp  main.h  mod.hpp  mods.h  naked.cpp  naked.h  patches.cpp  patches.h  toggles.h
src/dmc4_hook/ce/: dmc4pointers.CT
src/dmc4_hook/imgui/: imgui_impl_win32.cpp
src/dmc4_hook/mods/: EasyJc.cpp  EasyJc.hpp  InfDreadnought.cpp  InfDreadnought.hpp  NoClip.cpp  NoClip.hpp  modActiveBlock.cpp  modActiveBlock.hpp  modAreaJump.cpp  modAreaJump.hpp  modBackgroundRendering.cpp  modBackgroundRendering.hpp  modBerialDaze.cpp  modBerialDaze.hpp  modBigHeadMode.cpp  modBigHeadMode.hpp  modBorderless.cpp  modBorderless.hpp  modBpBossRush.cpp  modBpBossRush.hpp  modBpJumpHook.cpp  modBpJumpHook.hpp  modBpPortal.cpp  modBpPortal.hpp  modCameraLookdown.cpp  modCameraLookdown.hpp  modCameraReset.cpp  modCameraReset.hpp  modCameraSettings.cpp  modCameraSettings.hpp  modCharacterSwap.cpp  modCharacterSwap.hpp  modChargeChecker.cpp  modChargeChecker.hpp  modCutsceneSkip.cpp  modCutsceneSkip.hpp  modDamageMultiplier.cpp  modDamageMultiplier.hpp  modDeltaTime.cpp  modDeltaTime.hpp  (+171 more)
src/dmc4_hook/sdk/: Devil4.cpp  Devil4.hpp  ReClass_Internal.hpp
src/dmc4_hook/twitch/: twitch.cpp  twitch.hpp
src/dmc4_hook/utils/: MessageDisplay.cpp  MessageDisplay.hpp  RingBuffer.hpp  Thread.cpp  Thread.hpp  crash_handler.cpp  crash_handler.h
src/fw-imgui/: imgui_imconfig.hpp  imgui_impl_win32.cpp
src/hacklib/include/glm/detail/: type_mat4x4.hpp  type_vec3.hpp
src/hacklib/src/: Logging.cpp  Main.cpp  Main_WIN32.cpp  PatternScanner.cpp
src/i18n/: en_dmc4hook.hpp  ew_dmc4hook.hpp  ru_dmc4hook.hpp  zh_dmc4hook.hpp  zh_zh_dmc4hook.hpp
src/minhook/: CMakeLists.txt
src/misc/: BgTexture.cpp  CompressedDrawing.cpp  PinTimerAtlas.cpp  TonyBg.cpp  extension.cpp  kAtckDefTbl.cpp
src/mods/: ActiveBlock.cpp  ActiveBlock.hpp  AerialDrive.cpp  AerialDrive.hpp  AerialStinger.cpp  AerialStinger.hpp  AfterImage.cpp  AfterImage.hpp  AirMustang.cpp  AirMustang.hpp  AlwaysRoyalRelease.cpp  AlwaysRoyalRelease.hpp  AngelSnatch.cpp  AngelSnatch.hpp  AreaJump.cpp  AreaJump.hpp  AssaultsDontJump.cpp  AssaultsDontJump.hpp  BackgroundRendering.cpp  BackgroundRendering.hpp  BerialDaze.cpp  BerialDaze.hpp  BigHeadMode.cpp  BigHeadMode.hpp  Borderless.cpp  Borderless.hpp  BpJumpHook.cpp  BpJumpHook.hpp  BpPortal.cpp  BpPortal.hpp  CameraSettings.cpp  CameraSettings.hpp  CharSwitcher.cpp  CharSwitcher.hpp  CharacterSwap.cpp  CharacterSwap.hpp  ChargeChecker.cpp  ChargeChecker.hpp  Coop.cpp  Coop.hpp  (+326 more)
src/sdk/: Cam.hpp  Devil4.cpp  Devil4.hpp  Enemy.hpp  Enums_Internal.hpp  Math.hpp  MtMath.hpp  Pad.hpp  Player.hpp  ReClass.hpp  ReClass_Internal.hpp  Save.hpp  World2Screen.cpp  World2Screen.hpp  uActor.hpp  uCollisionMgr.hpp
src/twitch/: Twitch.cpp  Twitch.hpp  libircclient.h
src/utility/: ChronoAlias.hpp  Compressed.cpp  Compressed.hpp  Config.cpp  Config.hpp  Dx9Utils.cpp  Dx9Utils.hpp  ExceptionHandler.cpp  FunctionHook.cpp  FunctionHook.hpp  Hash.hpp  Input.cpp  Input.hpp  Memory.cpp  Memory.hpp  MessageDisplay.cpp  MessageDisplay.hpp  MoFile.cpp  MoFile.hpp  Module.cpp  Module.hpp  Patch.cpp  Patch.hpp  Pattern.cpp  Pattern.hpp  RingBuffer.hpp  Scan.cpp  StackTrace.hpp  String.cpp  String.hpp  TextureAtlas.hpp  Thread.cpp  Thread.hpp  Timer.cpp  Timer.hpp
templates/: DMC4 pla.bt  DMC4_arc.bt  DMC4_atk.bt  DMC4_col.bt  DMC4_dfd.bt  DMC4_lmt_Che.bt  DMC4_mod.bt  DMC4_sbc.bt
(+14 files in other folders)
